home-automation/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 2022.5.4
  name: home-assistant
  namespace: home-assistant
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
  sessionAffinity: None
  type: ClusterIP
